<resources>
    <string name="app_name">NExS</string>

    <string name="date">9 November 2020</string>

    //drawer menu titles
    <string name="profile">Profile</string>
    <string name="bookmarks">BookMarks</string>
    <string name="logout">Log Out</string>

    //main menu titles basically for search menu
    <string name="search">Search</string>

    //main activity titles
    <string name="welcome">Welcome</string>
    <string name="user_name_string">User</string>
    <string name="date_string">Monday 9 November, 2020</string>
    <string name="view_your_bookmarked_news">View Your Bookmarked News >  </string>

    //News Category titles
    <string name="sports_news_title">Sports</string>
    <string name="education_news_title">Education</string>
    <string name="international_news_title">International</string>
    <string name="view_feed">Views Feed</string>
    <string name="tap_to_read_more_about_this_article">Tap to read more about this article.</string>
    <string name="read_more">Read more...</string>
    <string name="share">Share</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="background">Background</string>
    <string name="next">Next</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="nexs">NeXS</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="otp">OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_earned_1_coin">You earned 1 coin</string>
    <string name="ok">OK</string>
    <string name="coin_img">coin_img</string>
    <string name="others">Others</string>
    <string name="about_us">About Us</string>
</resources>
