<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_account_profile"
        android:title="@string/profile" />-->
    <item
        android:id="@+id/nav_bookmarks"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/logout" />
    <item
        android:id="@+id/about_us"
        android:icon="@drawable/ic_baseline_person_pin_24"
        android:title="@string/about_us" />
</menu>