<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="defaultPosition"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.co.nexs.nexsapp.NameActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/last"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nexscover" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="20dp"
        android:text="@string/nexs"
        android:textColor="@android:color/white"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="3dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/middle" />

    <EditText
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/input_bg"
        android:hint="@string/middle_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="3dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <EditText
        android:id="@+id/last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/input_bg"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="3dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/middle" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/mybtn3"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:drawablePadding="24dp"
        android:fontFamily="sans-serif"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last" />

</androidx.constraintlayout.widget.ConstraintLayout>
